@@ -2,6 +2,11 @@ CoolPlayer Revision History
 ===========================
 Version 219
  + Fixed potential buffer overflow when reading OGG tags
+ + Fixed open file dialog not being modal
+ + Fixed add directory dialog not being modal
+ + Enabled XP visual style support
+ + Fixed bitrate display showing parts of previous songs bitrate
+ + WAV file bitrate is now shown
 
 Version 218
  + Fixed channels being swapped when toggling EQ
